# claudegram

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
commands/: auth.md  dev.md  health.md
hooks/: hooks.json
hooks/scripts/: check-auth.sh  guard-confirm.sh  guard-delete.sh  guard-destructive.sh  notification.sh  pre-compact.sh  session-end.sh
server/: auth.py  channel.py  client.py  completions.py  config.py  devtools.py  formatters.py  main.py  middleware.py  models.py  permission_relay.py  prompts.py  resources.py
server/tools/: __init__.py  _common.py
server/tools/advanced/: __init__.py  health.py  help_api.py  raw.py  sampling.py
server/tools/chats/: __init__.py  admin.py  create.py  invites.py  members.py  settings.py
server/tools/content/: __init__.py  forums.py  payments.py  polls.py  stories.py
server/tools/dialogs/: __init__.py  batch.py  folders.py  folders_custom.py  list_.py  notify.py
server/tools/identity/: __init__.py  account.py  auth.py  privacy.py  security.py  sessions.py
server/tools/interactions/: __init__.py  bots.py
server/tools/media/: __init__.py  attachments.py  download.py  files.py  stickers.py  voice.py
server/tools/messaging/: __init__.py  drafts.py  history.py  messages.py  pins.py  reactions.py  scheduled.py  typing.py
server/tools/peers/: __init__.py  contacts.py  lookup.py  users.py
skills/telegram-workflow/: SKILL.md
skills/tg-channel-incoming/: SKILL.md
skills/tg-digest/: SKILL.md
skills/tg-history/: SKILL.md
skills/tg-reply/: SKILL.md
skills/tg-search/: SKILL.md
skills/tg-send/: SKILL.md
tests/: conftest.py  test_channel.py  test_common.py  test_completions.py  test_config.py  test_formatters.py  test_main_registration.py  test_prompts.py  test_raw_api.py  test_resources.py
